unpackaged/main/default/objects/ETST_Payment__c/fields/Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Account No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>