unpackaged/main/default/objects/ETST_Payment__c/fields/Card_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Card_Transaction_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>