unpackaged/main/default/objects/ETST_Payment__c/fields/ET_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>ET_Service_Request__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>ET_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>