unpackaged/main/default/objects/ETST_Payment__c/fields/ETI_IsUpdatedByBatch__c.field-meta.xml
<CustomField>
    <fullName>ETI_IsUpdatedByBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUpdatedByBatch</label>
    <type>Checkbox</type>
</CustomField>