unpackaged/main/default/objects/ETST_Payment__c/fields/ETS_Cheque_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>ETS_Cheque_Issued_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Issued Date</label>
    <type>Date</type>
</CustomField>