unpackaged/main/default/objects/ETST_Payment__c/fields/ETS_IBAN__c.field-meta.xml
<CustomField>
    <fullName>ETS_IBAN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>