unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_ACS_URL__c.field-meta.xml
<CustomField>
    <fullName>ETST_ACS_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACS URL</label>
    <type>Url</type>
</CustomField>