unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_ACSMd__c.field-meta.xml
<CustomField>
    <fullName>ETST_ACSMd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACSMd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>