unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_ACSPaReq__c.field-meta.xml
<CustomField>
    <fullName>ETST_ACSPaReq__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACSPaReq</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>