unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETST_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>