unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_AuthorizationCode__c.field-meta.xml
<CustomField>
    <fullName>ETST_AuthorizationCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AuthorizationCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>