unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_AuthorizationRRN__c.field-meta.xml
<CustomField>
    <fullName>ETST_AuthorizationRRN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AuthorizationRRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>