unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Bank_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Bank_Transaction_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Transaction Date</label>
    <type>Date</type>
</CustomField>