unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Bank_Transaction_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>ETST_Bank_Transaction_Ref_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Transaction Ref Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>