unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Capture_Link__c.field-meta.xml
<CustomField>
    <fullName>ETST_Capture_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capture Link</label>
    <type>Url</type>
</CustomField>