unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Capture_State__c.field-meta.xml
<CustomField>
    <fullName>ETST_Capture_State__c</fullName>
    <defaultValue>IF(  $RecordType.DeveloperName = &#39;On_Premise_Payment&#39;, &#39;SUCCESS&#39;, &#39;&#39;)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Capture State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>