unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Capture_Time__c.field-meta.xml
<CustomField>
    <fullName>ETST_Capture_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capture Time</label>
    <type>DateTime</type>
</CustomField>