unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Card_Expiry__c.field-meta.xml
<CustomField>
    <fullName>ETST_Card_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Expiry</label>
    <length>10</length>
    <type>Text</type>
</CustomField>