unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>ETST_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Number</label>
    <length>19</length>
    <type>Text</type>
</CustomField>