unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>ETST_Card_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>