unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Cardholder_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>