unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>ETST_Coordinator__c</fullName>
    <formula>ET_Service_Request__r.ETST_Coordinator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator</label>
    <type>Text</type>
</CustomField>