unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Curies_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Curies_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curies Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>