unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Curries_URL__c.field-meta.xml
<CustomField>
    <fullName>ETST_Curries_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Curries URL</label>
    <type>Url</type>
</CustomField>