unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Fare_Charges__c.field-meta.xml
<CustomField>
    <fullName>ETST_Fare_Charges__c</fullName>
    <formula>ET_Service_Request__r.ETST_Fare_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fare Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>