unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_IsCurriesTemplate__c.field-meta.xml
<CustomField>
    <fullName>ETST_IsCurriesTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCurriesTemplate</label>
    <type>Checkbox</type>
</CustomField>