unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>ETST_Order_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>