unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Parent__c.field-meta.xml
<CustomField>
    <fullName>ETST_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>