unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>ETST_Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>On Premises</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>