unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_recaptureCard__c.field-meta.xml
<CustomField>
    <fullName>ETST_recaptureCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>recaptureCard</label>
    <type>Checkbox</type>
</CustomField>