unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Refund_State__c.field-meta.xml
<CustomField>
    <fullName>ETST_Refund_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>