unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_RefundURL__c.field-meta.xml
<CustomField>
    <fullName>ETST_RefundURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RefundURL</label>
    <type>Url</type>
</CustomField>