unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_Tenure_Details__c.field-meta.xml
<CustomField>
    <fullName>ETST_Tenure_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tenure Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>