unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_AdditionalInfo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Info</label>
    <length>15</length>
    <type>Text</type>
</CustomField>