unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_ApprovalCode__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_ApprovalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>