unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_AvailablePoints__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_AvailablePoints__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Available Points</label>
    <length>10</length>
    <type>Text</type>
</CustomField>