unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_Batch__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_Batch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VFI Batch</label>
    <length>3</length>
    <type>Text</type>
</CustomField>