unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_CHVerification__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_CHVerification__c</fullName>
    <label>CH Verification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>PIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>