unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_CurrentInstruction__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_CurrentInstruction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Instruction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>