unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction DateTime</label>
    <type>DateTime</type>
</CustomField>