unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_EMV_AID__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_EMV_AID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMV AID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>