unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_EMV_Label__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_EMV_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMV Label</label>
    <length>16</length>
    <type>Text</type>
</CustomField>