unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_EMV_TSI__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_EMV_TSI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMV TSI</label>
    <length>4</length>
    <type>Text</type>
</CustomField>