unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_EPP_Fee__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_EPP_Fee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EPP Fee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>