unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_EPPTenure__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_EPPTenure__c</fullName>
    <description>Tenure of EPP Transaction</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Tenure of EPP Transaction</inlineHelpText>
    <label>EPP Tenure</label>
    <length>2</length>
    <type>Text</type>
</CustomField>