unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_Loyalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty</label>
    <type>Checkbox</type>
</CustomField>