unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_RespCode__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_RespCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>