unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_RespMess__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_RespMess__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Message</label>
    <type>TextArea</type>
</CustomField>