unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_Terminal_ID__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_Terminal_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Terminal ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>