unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_TouchAmount__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_TouchAmount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Touch Available Amount</label>
    <length>25</length>
    <type>Text</type>
</CustomField>