unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_TransSource__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_TransSource__c</fullName>
    <label>Transaction Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual Entry of Card Number</fullName>
            </value>
            <value>
                <fullName>Card Swipe</fullName>
            </value>
            <value>
                <fullName>ICC Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>