unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_TransType__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_TransType__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SALE</fullName>
            </value>
            <value>
                <fullName>PREAUTH</fullName>
            </value>
            <value>
                <fullName>CASHADV</fullName>
            </value>
            <value>
                <fullName>CASHBACK</fullName>
            </value>
            <value>
                <fullName>TIP</fullName>
            </value>
            <value>
                <fullName>REFUND</fullName>
            </value>
            <value>
                <fullName>PREAUTHCOMPLETION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>