unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_TxnId__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_TxnId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Txn Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>