unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_VoidRcptNo__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_VoidRcptNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Void Receipt Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>