unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_VoucherCode__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_VoucherCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Voucher Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>