unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_XLSTid__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_XLSTid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>XLS Tid</label>
    <length>8</length>
    <type>Text</type>
</CustomField>