unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFI_XLSTxnNo__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFI_XLSTxnNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>XLS Txn No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>