unpackaged/main/default/objects/ETST_Payment__c/fields/ETST_VFIPreauthCmplAmount__c.field-meta.xml
<CustomField>
    <fullName>ETST_VFIPreauthCmplAmount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preauth Cmpl Amount</label>
    <length>12</length>
    <type>Text</type>
</CustomField>