unpackaged/main/default/objects/ETST_Payment__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>