unpackaged/main/default/objects/ETST_Payment__c/recordTypes/Cash_Payment.recordType-meta.xml
<RecordType>
    <fullName>Cash_Payment</fullName>
    <active>true</active>
    <label>Cash Payment</label>
</RecordType>