unpackaged/main/default/objects/ETST_Payment__c/recordTypes/Cheque_Payment.recordType-meta.xml
<RecordType>
    <fullName>Cheque_Payment</fullName>
    <active>true</active>
    <label>Cheque / Bank Transfer</label>
</RecordType>