unpackaged/main/default/objects/ETST_Payment__c/recordTypes/Miscellaneous_Payment.recordType-meta.xml
<RecordType>
    <fullName>Miscellaneous_Payment</fullName>
    <active>true</active>
    <label>Miscellaneous Payment</label>
</RecordType>