unpackaged/main/default/objects/ETST_Payment__c/recordTypes/On_Premise_Payment.recordType-meta.xml
<RecordType>
    <fullName>On_Premise_Payment</fullName>
    <active>true</active>
    <label>On Premise Payment</label>
</RecordType>