unpackaged/main/default/objects/ETST_Payment__c/recordTypes/Verifone_Payment.recordType-meta.xml
<RecordType>
    <fullName>Verifone_Payment</fullName>
    <active>true</active>
    <label>Verifone Payment</label>
</RecordType>