unpackaged/main/default/objects/ETST_Payment__c/validationRules/Amount_not_exceed_the_service_req_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_not_exceed_the_service_req_amount</fullName>
    <active>true</active>
    <errorConditionFormula>ETST_Amount__c &gt;  ET_Service_Request__r.ETST_Fare_Charges__c &amp;&amp;  NOT($Profile.Name =&quot;System Administrator&quot;)</errorConditionFormula>
    <errorMessage>Amount Should not greater than the service request fare charges.</errorMessage>
</ValidationRule>