unpackaged/main/default/objects/ETST_Payment__c/validationRules/Cheque_exp_date_should_be_in_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cheque_exp_date_should_be_in_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>ETS_Cheque_Expiry_Date__c &lt; Today()</errorConditionFormula>
    <errorMessage>Cheque exp date should be grater than today&#39;s date.</errorMessage>
</ValidationRule>