unpackaged/main/default/objects/ETST_Payment__c/listViews/School_Payments.listView-meta.xml
<ListView>
    <fullName>School_Payments</fullName>
    <columns>NAME</columns>
    <columns>ETST_AuthorizationCode__c</columns>
    <columns>ETST_Amount__c</columns>
    <columns>ETST_Payment_Mode__c</columns>
    <columns>ET_Service_Request__c</columns>
    <columns>ETST_Gateway_Outlet_ID__c</columns>
    <columns>ETST_Payment_State__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ETST_Coordinator__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>School Payments</label>
</ListView>